Add a new CrimePagerActivity that replaces the CrimeActivity. CrimeActivity was left in but no longer used. App was updated to use the new CrimePagerActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CrimeActivity">
+        <!--Old way before ViewPager-->
+        <!--<activity android:name=".CrimeActivity">-->
+
+        <!--New Way with ViewPager-->
+        <activity android:name=".CrimePagerActivity">
         </activity>
     </application>
 
