Add a toolbar menuto create a new crime and toggle a subtitle. Add navigation back button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <!--<activity android:name=".CrimeActivity">-->
 
         <!--New Way with ViewPager-->
-        <activity android:name=".CrimePagerActivity">
+        <activity
+            android:name=".CrimePagerActivity"
+            android:parentActivityName=".CrimeListActivity">
         </activity>
     </application>
 
